<resources>
    <string name="app_name">OfflineBank</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="error_fetching_">There was an error fetching details</string>
    <string name="error_fetching_bank_acc_balance">There was an error fetching your bank account balance</string>
    <string name="error_index_">There was an error</string>

    <string name="fetch_gtbank_balance">Fetch Bank Balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting_text">Hello 👋🏾,\n\nLet’s know who you are.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="home_hello_intro">Hello %1$s 😊,\nWhat do you want to do?</string>
    <string name="transfer_funds">Transfer Money</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="buy_internet">Buy Data</string>

    <string name="pay_bills"><![CDATA["Pay Bills <small><font color=\'#5F6578\'>(Utilities, Sports & Gaming, Pay TV, etc) </font></small>"]]></string>
    <string name="check_balance">Check Account Balance</string>
    <string name="search_for_bank">Search for your bank</string>
    <string name="what_banks_do_you_currently_use">What banks do you currently use?</string>
    <string name="setting_up_for_you">Setting up for you...</string>
    <string name="all_done">All Done!</string>
    <string name="add_a_bank">Add a Bank</string>
    <string name="your_banks">Your Banks</string>
    <string name="add_to_my_banks">Add to my banks</string>
    <string name="amount_to_buy">Amount to buy</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recipient_bank">Recipient Bank</string>
    <string name="amount_to_transfer">Amount to transfer</string>
    <string name="account_number">Account number</string>
    <string name="gtbank">GTBank</string>
    <string name="accessbank">Access Bank</string>
    <string name="zenith_bank">Zenith Bank</string>
    <string name="uba">United Bank Of Africa</string>
    <string name="select_a_bank">Select a bank</string>
    <string name="close">Close</string>
    <string name="transaction_success_message">Your transaction has been \ncompleted successfully</string>
    <string name="failed_transaction_message">Your transaction failed.\nPlease try again later.</string>
    <string name="your_account_balance_s_are">Your account balance(s) are:</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="transaction_n0t_successful">Transaction not Successful</string>
    <string name="success">Your transaction has been completed successfully</string>

    <string name="all_banks">All Banks</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="airtime_purchase">Airtime Purchase</string>
</resources>