<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mnsons.offlinebank.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_buy_airtime"
            app:destination="@id/navigation_buy_airtime"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_transfer_money"
            app:destination="@id/navigation_transfer_money"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.mnsons.offlinebank.ui.dashboard.DashboardFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mnsons.offlinebank.ui.profile.userdetails.UserDetailsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_user_details">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_add_bank"
            app:destination="@id/navigation_add_bank"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_bank"
        android:name="com.mnsons.offlinebank.ui.profile.addbank.AddBankFragment"
        android:label="Add a Bank"
        tools:layout="@layout/fragment_add_bank" />

    <fragment
        android:id="@+id/navigation_buy_airtime"
        android:name="com.mnsons.offlinebank.ui.buyairtime.BuyAirtimeFragment"
        android:label="Buy Airtime"
        tools:layout="@layout/fragment_buy_airtime" />

    <fragment
        android:id="@+id/navigation_transfer_money"
        android:name="com.mnsons.offlinebank.ui.transfermoney.TransferMoneyFragment"
        android:label="Transfer Money"
        tools:layout="@layout/fragment_transfer_money" />

</navigation>