<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvPinConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="TextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPinConfirmation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pin"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/ActionButtonTheme"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/greyTextColor"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textSize="@dimen/text_16"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>