<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSaveBeneficiaryDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_16"
        android:textColor="@color/black"
        tools:text="TextView"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/btnYes"
        app:layout_constraintEnd_toEndOf="@+id/btnYes"
        app:layout_constraintStart_toStartOf="@+id/btnYes"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/blue"
        app:cornerRadius="10dp"
        android:textColor="@color/greyTextColor"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaveBeneficiaryDesc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/greyTextColor"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYes"
        app:strokeColor="@color/blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/greyTextColor"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textSize="@dimen/text_16"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>